avoiding zoom in fields on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 * {
 	margin: 0;
 	padding: 0;
+	-webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 html {
 	background-color: hsla(227, 100%, 70%, 1);
@@ -79,7 +81,7 @@ MODAL
 	transform: translate(-50%, -50%);
 	text-align: center;
 	position: fixed;
-	width: 80%;
+	max-width: 80%;
 	height: 10rem;
 	z-index: 200;
 	border: 1px hsla(227, 100%, 30%, 1) solid;
@@ -87,6 +89,8 @@ MODAL
 	display: flex;
   	flex-direction: column;
 	font-weight: bolder;
+	flex-shrink: 0;
+	flex-grow: 0;
 	transition: transform 0.5s ease;
 }
 .modal .title {
@@ -127,16 +131,11 @@ MODAL
 	border-radius: 0.2rem;
 	color: hsla(227, 100%, 30%, 1);
 	font-weight: bold;
+	margin: 0 0.5rem;
 }
 .modal button:hover {
 	background-color: hsla(227, 100%, 90%, 1);
 	cursor: pointer;
-}
-.modal button:nth-child(1) {
-	margin-right: 0.5rem;
-}
-.modal button:nth-child(2) {
-	margin-left: 0.5rem;
 }
 .modal-off {
 	transform: translateY(-800%);
